--- a/.github/workflows/sbom-vex-scan.yml
+++ b/.github/workflows/sbom-vex-scan.yml
@@ -1,36 +1,46 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Sbom/Vex scans and upload
+name: SBOM/VEX generation
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches: [ "main" ]
-  # pull_request:
-  #   branches: [ "main" ]
+
 
 jobs:
-  scan:
-    name: Scan projects
+  sbom-vex-scan:
+    name: SBOM/VEX Generation
     runs-on: ubuntu-latest
     container: quay.io/pluribus_one/sbom_vex_scanner:latest
     strategy:
       fail-fast: false
       matrix:
-        prj_folder: [ 'dvna', 'vulnado']
+        prj_folder: [ "dvna", "vulnado" ]
 
     steps:
-    - uses: actions/checkout@v3
-    - run: |
-        cd vuln_apps/${{ matrix.prj_folder }}
-        cdxgen --format json -o "${{matrix.prj_folder}}_bom.json" --spec-version=1.4
-        osv-scanner -S "${{matrix.prj_folder}}_bom.json" --format json  > "${{matrix.prj_folder}}_vex.json"
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: Archive code coverage results
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        name: sbom-vex-jsons
-        path: vuln_apps/**/${{matrix.prj_folder}}_*.json
-        retention-days: 5
+      - name: Generate SBOMs
+        run: |
+          cd vuln_apps/${{ matrix.prj_folder }}
+          cdxgen --format json -o "${{ matrix.prj_folder }}_bom.json" --spec-version=1.4
+
+      - name: Generate VEXs (JSON)
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: "sbom vuln_apps/${{ matrix.prj_folder }}/${{ matrix.prj_folder }}_bom.json"
+          format: "cyclonedx"
+          output: "vuln_apps/${{ matrix.prj_folder }}/${{ matrix.prj_folder }}_vex.json"
+
+      - name: Generate VEXs (Human)
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: "sbom vuln_apps/${{ matrix.prj_folder }}/${{ matrix.prj_folder }}_bom.json"
+          format: "table"
+          output: "vuln_apps/${{ matrix.prj_folder }}/${{ matrix.prj_folder }}_vex_human"
+
+      - name: Upload results
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: sbom-vex-jsons
+          path: vuln_apps/**/${{matrix.prj_folder}}_*
+          retention-days: 5
