--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,67 +1,56 @@
-# For most projects, this workflow file will not need changing; you simply need
-# to commit it to your repository.
-#
-# You may wish to alter this file to override the set of languages analyzed,
-# or to provide custom queries or build logic.
-#
-# ******** NOTE ********
-# We have attempted to detect the languages in your repository. Please check
-# the `language` matrix defined below to confirm you have the correct set of
-# supported CodeQL languages.
-#
 name: "CodeQL"
 
+#we will launch this actions with a manual trigger, as well when a push is committed or a PR is opened on main branch
 on:
   workflow_dispatch:
-  # push:
-  #   branches: [ "main" ]
-  # pull_request:
-  #   branches: [ "main" ]
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
+  #jobs name and settings
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
-    timeout-minutes:  360
+    timeout-minutes: 360
     permissions:
       actions: read
       contents: read
       security-events: write
 
+    #setup strategy, with matrix options, we are executing two jobs with different languages
     strategy:
       fail-fast: false
       matrix:
         language: ["java-kotlin", "javascript-typescript"]
-        # prj_folder: ["vuln_apps/vulnado", "vuln_apps/dvna"]
-        # exclude:
-        #   - language: "java-kotlin"
-        #     prj_folder: "vuln_apps/dvna"
-            
         # CodeQL supports [ 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'swift' ]
 
     steps:
+      # Checkout the repo, this will setup the pipeline with our actual codebase
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Setup CodeQL tool, with this predefined step, we are specifying the language of the scan
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
           languages: ${{ matrix.language }}
 
+      # Build the codebase, codeql offer an autobuild steps for most of his supported languages: https://docs.github.com/en/code-security/code-scanning/creating-an-advanced-setup-for-code-scanning/codeql-code-scanning-for-compiled-languages
+      - if: matrix.language != 'java-kotlin'
+        name: Autobuild
+        uses: github/codeql-action/autobuild@v2
+
+      # In case our java project, we are leveraging some project specific needs
       - if: matrix.language == 'java-kotlin'
         name: Compile project
         run: |
           cd vuln_apps/vulnado
           ./mvnw -B clean package -DskipTests=true
 
-      - if: matrix.language != 'java-kotlin'
-        name: Autobuild
-        uses: github/codeql-action/autobuild@v2
-
+      # Perform the actual code analysis, that will automatic upload GitHub security section
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
         with:
           category: "/language:${{matrix.language}}"
-
-      - name: List files  
-        run: ls /home/runner/work/_temp/codeql_databases
