--- a/.github/workflows/image_sbom.yml
+++ b/.github/workflows/image_sbom.yml
@@ -31,13 +31,13 @@ jobs:
       
       - name: Generate SBOMs
         run: |
-          cdxgen --format docker -o "${{ matrix.prj_folder }}_bom.json" ${{ matrix.prj_folder }}:latest
+          cdxgen --type docker -o "${{ matrix.prj_folder }}-docker_bom.json" ${{ matrix.prj_folder }}:latest
       
       - name: upload Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: image-sbom
-          path: "{{ matrix.prj_folder }}_bom.json"
+          path: "{{ matrix.prj_folder }}-docker_bom.json"
           retention-days: 5
 
     
