--- a/.github/workflows/vuln_man.yml
+++ b/.github/workflows/vuln_man.yml
@@ -72,8 +72,8 @@ jobs:
       - name: upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: sbom-image-{{matrix.project}}
-          path: "{{ matrix.project }}-docker_bom.json"
+          name: sbom-image-${{matrix.project}}
+          path: "${{ matrix.project }}-docker_bom.json"
           retention-days: 5
 
   merge-sbom:
@@ -92,7 +92,7 @@ jobs:
           ls -la
           
           
-#cyclonedx merge --input-files ${{ matrix.project }}-docker_bom.json vuln_apps/${{matrix.project}}/${{ matrix.project }}_bom.json --output-file ${{ matrix.project }}_merged_sbom.json --hierarchical --name {{ matrix.project }}_final --version $BUILD_NUMBER 
+#cyclonedx merge --input-files ${{ matrix.project }}-docker_bom.json vuln_apps/${{matrix.project}}/${{ matrix.project }}_bom.json --output-file ${{ matrix.project }}_merged_sbom.json --hierarchical --name ${{ matrix.project }}_final --version $BUILD_NUMBER 
 #cat ${{ matrix.project }}_merged_sbom.json >> "$GITHUB_OUTPUT"
 
 
