--- a/.github/workflows/vuln_man.yml
+++ b/.github/workflows/vuln_man.yml
@@ -126,9 +126,6 @@ jobs:
         project: [ "dvna", "vulnado" ]
 
     steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Download merged sbom
         uses: actions/download-artifact@v4
         with:
@@ -153,6 +150,6 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: sbom-vex
+          name: sbom-vex-${{matrix.project}}
           path: ${{matrix.project}}_vex*
           retention-days: 5
