--- a/.github/workflows/vuln_man.yml
+++ b/.github/workflows/vuln_man.yml
@@ -1,4 +1,4 @@
-name: Vulnerability management workflow
+name: Sbom generation
 
 on:
   workflow_dispatch:
@@ -76,7 +76,7 @@ jobs:
           retention-days: 5
 
   merge-sbom:
-    name: Merge VEX from SBOM
+    name: Merge previously generated SBOM
     runs-on: ubuntu-latest
     needs: ["sbom", "sbom-docker"]
     container: cyclonedx/cyclonedx-cli:0.25.0
