--- a/.github/workflows/vuln_man.yml
+++ b/.github/workflows/vuln_man.yml
@@ -8,8 +8,6 @@ jobs:
     name: Generate app SBOM
     runs-on: ubuntu-latest
     container: quay.io/pluribus_one/sbom_vex_scanner:latest
-    # outputs:
-    #   sbom: ${{ steps.sbom_app.outputs.bom }}
     strategy:
       fail-fast: false
       matrix:
@@ -20,11 +18,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate SBOMs
-        # id: "sbom_app"
         run: |
           cd vuln_apps/${{ matrix.project }}
           cdxgen --format json -o "${{ matrix.project }}_bom.json"
-        # echo "bom=$(cat ${{ matrix.project }}_bom.json)" >> "$GITHUB_OUTPUT"
 
       - name: Upload results
         if: always()
@@ -34,54 +30,46 @@ jobs:
           path: "vuln_apps/${{ matrix.project }}/${{ matrix.project }}_bom.json"
           retention-days: 5
 
-  sbom-docker:
-    name: Generate docker SBOM
-    runs-on: ubuntu-latest
-    container: quay.io/pluribus_one/sbom_vex_scanner:latest
-    # outputs:
-    #   sbom: ${{ steps.sbom_docker.outputs.bom }}
-    strategy:
-      fail-fast: false
-      matrix:
-        project: ["dvna", "vulnado"]
+  # sbom-docker:
+  #   name: Generate docker SBOM
+  #   runs-on: ubuntu-latest
+  #   container: quay.io/pluribus_one/sbom_vex_scanner:latest
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       project: ["dvna", "vulnado"]
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker image
-        id: build-image
-        uses: docker/build-push-action@v5
-        with:
-          context: "${{ github.workspace }}/vuln_apps/${{ matrix.project }}"
-          push: false
-          load: true
-          tags: ${{ matrix.project }}:latest
+  #     - name: Build Docker image
+  #       id: build-image
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         context: "${{ github.workspace }}/vuln_apps/${{ matrix.project }}"
+  #         push: false
+  #         load: true
+  #         tags: ${{ matrix.project }}:latest
 
-      - name: Generate docker SBOMs
-        # id: "sbom_docker"
-        run: |
-          cdxgen --type docker -o "${{ matrix.project }}-docker_bom.json" ${{ matrix.project }}:latest
-          cat ${{ matrix.project }}-docker_bom.json
-        # echo "bom=$(cat ${{ matrix.project }}-docker_bom.json)"  >> "$GITHUB_OUTPUT"
+  #     - name: Generate docker SBOMs
+  #       run: |
+  #         cdxgen --type docker
 
-      - name: upload Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: sbom-image-${{matrix.project}}
-          path: "${{ matrix.project }}-docker_bom.json"
-          retention-days: 5
+  #     - name: upload Artifacts
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: sbom-image-${{matrix.project}}
+  #         path: "/path/to/output/bom.json"
 
   merge-sbom:
     name: Merge previously generated SBOM
     runs-on: ubuntu-latest
     needs: ["sbom", "sbom-docker"]
-    container: cyclonedx/cyclonedx-cli:0.25.0
-    # outputs:
-    #   sbom-merge: ${{ steps.merge_sbom.outputs }}
+    container: cyclonedx/container:tag
     strategy:
       fail-fast: false
       matrix:
@@ -101,14 +89,12 @@ jobs:
           path: ./sboms-${{matrix.project}}
 
       - name: Merge previously generated sboms
-        # id: "merge_sbom"
         run: |
-          cd sboms-${{matrix.project}}
-          cyclonedx merge --input-files ${{ matrix.project }}-docker_bom.json ${{ matrix.project }}_bom.json --output-file ${{ matrix.project }}_merged_sbom.json --hierarchical --name ${{ matrix.project }} --version ${{ github.run_number }}
+          cyclonedx merge --input-files file_in_1.json file_in_2.json --output-file file_out.json --hierarchical --name ${{ matrix.project }} --version ${{ github.run_number }}
 
       - name: upload Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: sbom-merged-${{matrix.project}}
-          path: "sboms-${{matrix.project}}/${{ matrix.project }}_merged_sbom.json"
+          path: "path/to/output/file.json"
           retention-days: 5
