--- a/.github/workflows/vuln_man_mod.yml
+++ b/.github/workflows/vuln_man_mod.yml
@@ -30,41 +30,41 @@ jobs:
           path: "vuln_apps/${{ matrix.project }}/${{ matrix.project }}_bom.json"
           retention-days: 5
 
-  # sbom-docker:
-  #   name: Generate docker SBOM
-  #   runs-on: ubuntu-latest
-  #   container: quay.io/pluribus_one/sbom_vex_scanner:latest
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       project: ["dvna", "vulnado"]
+  sbom-docker:
+    name: Generate docker SBOM
+    runs-on: ubuntu-latest
+    container: quay.io/pluribus_one/sbom_vex_scanner:latest
+    strategy:
+      fail-fast: false
+      matrix:
+        project: ["dvna", "vulnado"]
 
-  #   steps:
-  #     - name: Checkout Repository
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-  #     - name: Build Docker image
-  #       id: build-image
-  #       uses: docker/build-push-action@v5
-  #       with:
-  #         context: "${{ github.workspace }}/vuln_apps/${{ matrix.project }}"
-  #         push: false
-  #         load: true
-  #         tags: ${{ matrix.project }}:latest
+      - name: Build Docker image
+        id: build-image
+        uses: docker/build-push-action@v5
+        with:
+          context: "${{ github.workspace }}/vuln_apps/${{ matrix.project }}"
+          push: false
+          load: true
+          tags: ${{ matrix.project }}:latest
 
-  #     - name: Generate docker SBOMs
-  #       run: |
-  #         cdxgen --type docker
+      - name: Generate docker SBOMs
+        run: |
+          cdxgen --type docker -o "${{ matrix.project }}-docker_bom.json" ${{ matrix.project }}:latest
 
-  #     - name: upload Artifacts
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: sbom-image-${{matrix.project}}
-  #         path: "/path/to/output/bom.json"
-  #         retention-days: 5
+      - name: upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: sbom-image-${{matrix.project}}
+          path: "/path/to/output/bom.json"
+          retention-days: 5
 
   # merge-sbom:
   #   name: Merge previously generated SBOM
