change artifact name

--- a/.github/workflows/vuln_man_mod.yml
+++ b/.github/workflows/vuln_man_mod.yml
@@ -63,7 +63,7 @@ jobs:
       - name: upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: sbom-image-${{matrix.project}}
+          name: sbom-docker-${{matrix.project}}
           path: "${{ matrix.project }}-docker_bom.json"
           retention-days: 5
           if-no-files-found: error
@@ -88,7 +88,7 @@ jobs:
   #     - name: Download artifact sbom-docker
   #       uses: actions/download-artifact@v4
   #       with:
-  #         name: sbom-image-${{matrix.project}}
+  #         name: sbom-docker-${{matrix.project}}
   #         path: ./sboms-${{matrix.project}}
 
   #     - name: Merge previously generated sboms
