--- a/.github/workflows/vuln_man_mod.yml
+++ b/.github/workflows/vuln_man_mod.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: sbom-${{matrix.project}}
-          path: "vuln_apps/${{ matrix.project }}/${{ matrix.project }}_bom.json"
+          path: vuln_apps/${{ matrix.project }}/${{ matrix.project }}_bom.json
           retention-days: 5
           if-no-files-found: error
 
@@ -64,41 +64,41 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: sbom-docker-${{matrix.project}}
-          path: "${{ matrix.project }}-docker_bom.json"
+          path: ${{ matrix.project }}-docker_bom.json
           retention-days: 5
           if-no-files-found: error
 
-  # merge-sbom:
-  #   name: Merge previously generated SBOM
-  #   runs-on: ubuntu-latest
-  #   needs: ["sbom", "sbom-docker"]
-  #   container: cyclonedx/container:tag
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       project: ["dvna", "vulnado"]
+  merge-sbom:
+    name: Merge previously generated SBOM
+    runs-on: ubuntu-latest
+    needs: ["sbom", "sbom-docker"]
+    container:  cyclonedx/cyclonedx-cli:0.25.0
+    strategy:
+      fail-fast: false
+      matrix:
+        project: ["dvna", "vulnado"]
 
-  #   steps:
-  #     - name: Download artifact sbom
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         name: sbom-${{matrix.project}}
-  #         path: ./sboms-${{matrix.project}}
+    steps:
+      - name: Download artifact sbom
+        uses: actions/download-artifact@v4
+        with:
+          name: sbom-${{matrix.project}}
+          path: ./sboms-${{matrix.project}}
 
-  #     - name: Download artifact sbom-docker
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         name: sbom-docker-${{matrix.project}}
-  #         path: ./sboms-${{matrix.project}}
+      - name: Download artifact sbom-docker
+        uses: actions/download-artifact@v4
+        with:
+          name: sbom-docker-${{matrix.project}}
+          path: ./sboms-${{matrix.project}}
 
-  #     - name: Merge previously generated sboms
-  #       run: |
-  #         cyclonedx merge --input-files sboms-${{matrix.project}}/file_in_1.json sboms-${{matrix.project}}/file_in_2.json --output-file file_out.json --hierarchical --name ${{ matrix.project }} --version ${{ github.run_number }}
+      - name: Merge previously generated sboms
+        run: |
+          cyclonedx merge --input-files ${{ matrix.project }}_bom.json ${{ matrix.project }}-docker_bom.json --output-file ${{ matrix.project }}_merged_sbom.json --hierarchical --name ${{ matrix.project }}--version ${{ github.run_number }} --version ${{ github.run_number }} --group devsecops-exercises 
 
-  #     - name: upload Artifacts
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: sbom-merged-${{matrix.project}}
-  #         path: "path/to/output/file.json"
-  #         retention-days: 5
-  #         if-no-files-found: error
+      - name: upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: sbom-merged-${{matrix.project}}
+          path: ${{ matrix.project }}_merged_sbom.json
+          retention-days: 5
+          if-no-files-found: error
