--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,16 +1,16 @@
-name: Semgrep
 on:
   workflow_dispatch: {}
   pull_request: {}
   push:
     branches:
-      - main
-      - master
+    - main
+    - master
     paths:
-      - .github/workflows/semgrep.yml
+    - .github/workflows/semgrep.yml
   schedule:
-    # random HH:MM to avoid a load spike on GitHub Actions at 00:00
-    - cron: '12 1 * * *'
+  # random HH:MM to avoid a load spike on GitHub Actions at 00:00
+  - cron: 12 1 * * *
+name: Semgrep
 jobs:
   semgrep:
     name: semgrep/ci
@@ -18,8 +18,7 @@ jobs:
     env:
       SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
     container:
-      image: semgrep/semgrep
-    if: (github.actor != 'dependabot[bot]')
+      image: returntocorp/semgrep
     steps:
-      - uses: actions/checkout@v3
-      - run: semgrep ci
+    - uses: actions/checkout@v3
+    - run: semgrep ci
