--- a/.github/workflows/vuln_man.yml
+++ b/.github/workflows/vuln_man.yml
@@ -7,11 +7,21 @@ jobs:
   sbom:
     name: Generate app SBOM
     runs-on: ubuntu-latest
-    container: quay.io/pluribus_one/sbom_vex_scanner:latest
     strategy:
       fail-fast: false
       matrix:
         project: ["dvna", "vulnado"]
+        cdx_spec_version: ["1.5"]
+        include:
+          - project: vulnado
+            cdx_spec_version: "1.5"
+            cdx_image: ghcr.io/cyclonedx/cdxgen-java:v10
+          - project: dvna
+            cdx_spec_version: "1.5"
+            cdx_image:  quay.io/pluribus_one/sbom_vex_scanner@sha256:4c93316f95a2fe12bd2683ec34ff36d8e3a29501c797fb4825e7e510bab29ce3
+
+    container:
+      image: ${{matrix.cdx_image}}
 
     steps:
       - name: Checkout Repository
@@ -20,7 +30,12 @@ jobs:
       - name: Generate SBOMs
         run: |
           cd vuln_apps/${{ matrix.project }}
-          cdxgen --format json -o "${{ matrix.project }}_bom.json"
+          cdxgen \
+          --format json \
+          --spec-version="${{matrix.cdx_spec_version}}" \
+          --project-name="${{ matrix.project }}" \
+          --project-version="${{ github.run_number }}" \
+          -o "${{ matrix.project }}_bom.json"
 
       - name: Upload results
         if: always()
@@ -34,11 +49,12 @@ jobs:
   sbom-docker:
     name: Generate docker SBOM
     runs-on: ubuntu-latest
-    container: quay.io/pluribus_one/sbom_vex_scanner:latest
+    container: quay.io/pluribus_one/sbom_vex_scanner@sha256:4c93316f95a2fe12bd2683ec34ff36d8e3a29501c797fb4825e7e510bab29ce3
     strategy:
       fail-fast: false
       matrix:
         project: ["dvna", "vulnado"]
+        cdx_spec_version: ["1.5"]
 
     steps:
       - name: Checkout Repository
@@ -57,8 +73,15 @@ jobs:
           tags: ${{ matrix.project }}:latest
 
       - name: Generate docker SBOMs
-        run: |
-          cdxgen --type docker -o "${{ matrix.project }}-docker_bom.json" ${{ matrix.project }}:latest
+        run: >
+          cdxgen
+          --type docker
+          --format json
+          --spec-version="${{matrix.cdx_spec_version}}"
+          --project-name="${{ matrix.project }}"
+          --project-version="${{ github.run_number }}"
+          -o "${{ matrix.project }}-docker_bom.json"
+          ${{ matrix.project }}:latest
 
       - name: upload Artifacts
         uses: actions/upload-artifact@v4
@@ -72,7 +95,7 @@ jobs:
     name: Merge previously generated SBOM
     runs-on: ubuntu-latest
     needs: ["sbom", "sbom-docker"]
-    container: cyclonedx/cyclonedx-cli:0.25.0
+    container: cyclonedx/cyclonedx-cli:0.27.1
     strategy:
       fail-fast: false
       matrix:
@@ -92,8 +115,14 @@ jobs:
           path: ./sboms-${{matrix.project}}
 
       - name: Merge previously generated sboms
-        run: |
-          cyclonedx merge --input-files sboms-${{matrix.project}}/${{ matrix.project }}_bom.json sboms-${{matrix.project}}/${{ matrix.project }}-docker_bom.json --output-file ${{ matrix.project }}_merged_sbom.json --hierarchical --name ${{ matrix.project }} --version ${{ github.run_number }} --group devsecops-exercises
+        run: >
+          cyclonedx merge
+          --input-files sboms-${{matrix.project}}/${{ matrix.project }}_bom.json sboms-${{matrix.project}}/${{ matrix.project }}-docker_bom.json
+          --output-file ${{ matrix.project }}_merged_sbom.json
+          --hierarchical
+          --name ${{ matrix.project }}
+          --version ${{ github.run_number }}
+          --group devsecops-exercises
 
       - name: upload Artifacts
         uses: actions/upload-artifact@v4
