--- a/.github/workflows/vuln_man.yml
+++ b/.github/workflows/vuln_man.yml
@@ -1,4 +1,4 @@
-name: SBOM generation final
+name: SBOM generation
 
 on:
   workflow_dispatch:
@@ -56,6 +56,7 @@ jobs:
         project: ["dvna", "vulnado"]
         cdx_spec_version: ["1.5"]
 
+# Exercise SBOM generation
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -72,62 +73,64 @@ jobs:
           load: true
           tags: ${{ matrix.project }}:latest
 
-      - name: Generate docker SBOMs
-        run: >
-          cdxgen
-          --type docker
-          --format json
-          --spec-version="${{matrix.cdx_spec_version}}"
-          --project-name="${{ matrix.project }}"
-          --project-version="${{ github.run_number }}"
-          -o "${{ matrix.project }}-docker_bom.json"
-          ${{ matrix.project }}:latest
+# Exercise Docker SBOM generation
+#      - name: Generate docker SBOMs
+#        run: >
+#          cdxgen
+#          --type docker
+#          --format json
+#          --spec-version="${{matrix.cdx_spec_version}}"
+#          --project-name="${{ matrix.project }}"
+#          --project-version="${{ github.run_number }}"
+#          -o "${{ matrix.project }}-docker_bom.json"
+#          ${{ matrix.project }}:latest
+#
+#      - name: upload Artifacts
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: sbom-${{matrix.project}}-docker
+#          path: ${{ matrix.project }}-docker_bom.json
+#          retention-days: 5
+#          if-no-files-found: error
 
-      - name: upload Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: sbom-${{matrix.project}}-docker
-          path: ${{ matrix.project }}-docker_bom.json
-          retention-days: 5
-          if-no-files-found: error
-
-  merge-sbom:
-    name: Merge previously generated SBOM
-    runs-on: ubuntu-latest
-    needs: ["sbom", "sbom-docker"]
-    container: cyclonedx/cyclonedx-cli:0.27.1
-    strategy:
-      fail-fast: false
-      matrix:
-        project: ["dvna", "vulnado"]
-
-    steps:
-      - name: Download artifact sbom
-        uses: actions/download-artifact@v4
-        with:
-          name: sbom-${{matrix.project}}
-          path: ./sboms-${{matrix.project}}
-
-      - name: Download artifact sbom-docker
-        uses: actions/download-artifact@v4
-        with:
-          name: sbom-${{matrix.project}}-docker
-          path: ./sboms-${{matrix.project}}
-
-      - name: Merge previously generated sboms
-        run: >
-          cyclonedx merge
-          --input-files sboms-${{matrix.project}}/${{ matrix.project }}_bom.json sboms-${{matrix.project}}/${{ matrix.project }}-docker_bom.json
-          --output-file ${{ matrix.project }}_merged_sbom.json
-          --hierarchical
-          --name ${{ matrix.project }}
-          --version ${{ github.run_number }}
-          --group devsecops-exercises
-
-      - name: upload Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: sbom-${{matrix.project}}-merged
-          path: ${{ matrix.project }}_merged_sbom.json
-          retention-days: 5
-          if-no-files-found: error
+# Exercise Merge multiple SBOMs
+#  merge-sbom:
+#    name: Merge previously generated SBOM
+#    runs-on: ubuntu-latest
+#    needs: ["sbom", "sbom-docker"]
+#    container: cyclonedx/cyclonedx-cli:0.27.1
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        project: ["dvna", "vulnado"]
+#
+#    steps:
+#      - name: Download artifact sbom
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: sbom-${{matrix.project}}
+#          path: ./sboms-${{matrix.project}}
+#
+#      - name: Download artifact sbom-docker
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: sbom-${{matrix.project}}-docker
+#          path: ./sboms-${{matrix.project}}
+#
+#      - name: Merge previously generated sboms
+#        run: >
+#          cyclonedx merge
+#          --input-files sboms-${{matrix.project}}/${{ matrix.project }}_bom.json sboms-${{matrix.project}}/${{ matrix.project }}-docker_bom.json
+#          --output-file ${{ matrix.project }}_merged_sbom.json
+#          --hierarchical
+#          --name ${{ matrix.project }}
+#          --version ${{ github.run_number }}
+#          --group devsecops-exercises
+#
+#      - name: upload Artifacts
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: sbom-${{matrix.project}}-merged
+#          path: ${{ matrix.project }}_merged_sbom.json
+#          retention-days: 5
+#          if-no-files-found: error
