--- a/.github/workflows/vuln_man.yml
+++ b/.github/workflows/vuln_man.yml
@@ -48,7 +48,7 @@ jobs:
           if-no-files-found: error
 
 
-# Exercise Docker SBOM generation
+## Exercise Docker SBOM generation
   sbom-docker:
     name: Generate docker SBOM
     runs-on: ubuntu-latest
